Week2 hardening: fix isolation, virtual threads, gateway routing, and security alignment